--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "react-bootstrap": "^2.10.9",
     "rollup": "^4.34.8",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.7.3"
