--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.9",
     "rollup": "^4.34.8",
     "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-postcss": "4.0.2",
     "typescript": "^5.7.3"
   },
   "peerDependencies": {
