--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ESNext",
+    "target": "ES2020",
+    "module": "esnext",
     "declaration": true,
     "declarationDir": "./dist/types",
     "outDir": "./dist",
