--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sibdevtools/frontend-common",
-  "version": "0.0.4",
+  "version": "0.0.9",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -12,16 +12,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "react-bootstrap": "^2.10.9",
     "rollup": "^4.34.8",
-    "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-postcss": "4.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.7.3"
   },
   "peerDependencies": {
