--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sibdevtools/frontend-common",
-  "version": "0.0.40",
+  "version": "0.1.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -12,24 +12,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "cssnano": "^7.0.6",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "react-bootstrap": "^2.10.9",
-    "rollup": "^4.34.8",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "react-bootstrap": "^2.10.10",
+    "rollup": "^4.44.1",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "publishConfig": {
     "registry": "https://nexus.sibmaks.ru/repository/npm-release/"
